--- a/package.xml
+++ b/package.xml
@@ -5,4 +5,5 @@
   <description>Cmake library</description>
   <maintainer email="pavelguzenfeld@gmail.com">Pavel Guzenfeld</maintainer>
   <license>MIT</license>
+  <build_depend>cmake</build_depend>
 </package>
